kubernetes/managed-certificate-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managed-certificate-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: managed-certificate-controller
  template:
    metadata:
      labels:
        app: managed-certificate-controller
    spec:
      serviceAccountName: managed-certificate-account
      containers:
        - name: managed-certificate-controller
          image: eu.gcr.io/managed-certs-gke/managed-certificate-controller:ci_latest
          imagePullPolicy: Always
          volumeMounts:
            - name: ssl-certs
              mountPath: "/etc/ssl/certs"
              readOnly: true
            - name: usrsharecacerts
              mountPath: "/usr/share/ca-certificates"
              readOnly: true
            - name: logfile
              mountPath: "/var/log/managed_certificate_controller.log"
              readOnly: false
            - name: sa-key-volume
              mountPath: /etc/gcp
              readOnly: true
      volumes:
        - name: ssl-certs
          hostPath:
            path: "/etc/ssl/certs"
        - name: usrsharecacerts
          hostPath:
            path: "/usr/share/ca-certificates"
        - name: logfile
          hostPath:
            path: "/var/log/managed_certificate_controller.log"
            type: FileOrCreate
        - name: sa-key-volume
          secret:
            secretName: sa-key
            items:
              - key: key.json
                path: key.json
