kubernetes/deployment-admin-server.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-server
  labels:
    app: admin-server
spec:
  ports:
    - name: http
      port: 9000
  selector:
    app: admin-server
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: admin-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: admin-server
        version: v1
    spec:
      containers:
        - name: admin-server
          image: eu.gcr.io/spring-boot-gke-243520/admin-server:1.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 9000
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            initialDelaySeconds: 200
            periodSeconds: 5
