kubernetes/deployment-authentication-service.yml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  annotations:
    cloud.google.com/app-protocols: '{"https-port":"HTTPS","http-port":"HTTP"}'
  labels:
    app: authentication-service
spec:
  ports:
    - name: https-port
      port: 8443
    - name: http-port
      port: 9999
  selector:
    app: authentication-service
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: authentication-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: authentication-service
        version: v1
    spec:
      containers:
        - name: authentication-service
          image: eu.gcr.io/spring-boot-gke-243520/authentication-service:latest
#          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: spendingbetter-crt
              mountPath: "/etc/crt"
              readOnly: true
            - name: spendingbetter-jks
              mountPath: "/etc/ssl_certs_jks"
              readOnly: true
          command: ["/bin/sh"]
          args: ["-c", "keytool -import -trustcacerts -alias spendingbetter.com -file /etc/crt/www.spendingbetter.com.crt -storepass changeit -keystore $JAVA_HOME/lib/security/cacerts -noprompt && $JAVA_CMD"]
          ports:
            - containerPort: 9999
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health
              port: 9999
            initialDelaySeconds: 200
            periodSeconds: 5
      volumes:
        - name: spendingbetter-crt
          secret:
            secretName: spendingbetter-crt
        - name: spendingbetter-jks
          secret:
            secretName: spendingbetter-jks
