kubernetes/deployment-edge-server.yml
apiVersion: v1
kind: Service
metadata:
  name: edge-server
  annotations:
    cloud.google.com/app-protocols: '{"https-port":"HTTPS"}'
  labels:
    app: edge-server
spec:
  ports:
    - name: https-port
      port: 8443
  selector:
    app: edge-server
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: edge-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: edge-server
        version: v1
    spec:
      containers:
        - name: edge-server
          image: eu.gcr.io/spring-boot-gke-243520/edge-server:1.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: spendingbetter-jks
              mountPath: "/etc/ssl_certs"
              readOnly: true
          command: ["/bin/sh"]
          args: ["-c", "keytool -import -file /var/run/secrets/kubernetes.io/serviceaccount/ca.crt -keystore /etc/ssl/truststore.jks -storepass $(KEYSTORE_PASSWORD) -alias kubernetes_ca -noprompt && $JAVA_CMD"]
          ports:
            - containerPort: 8443
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /actuator/health
              port: 8443
            initialDelaySeconds: 200
            periodSeconds: 5
      volumes:
        - name: spendingbetter-jks
          secret:
            secretName: spendingbetter-jks
