kubernetes/deployment-eureka-peer.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server-peer
  annotations:
    cloud.google.com/app-protocols: '{"https-port":"HTTPS","http-port":"HTTP"}'
  labels:
    app: eureka-server-peer
spec:
  ports:
    - name: https-port
      port: 8443
    - name: http-port
      port: 8761
  selector:
    app: eureka-server-peer
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: eureka-server-peer
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: eureka-server-peer
        version: v1
    spec:
      containers:
        - name: eureka-server-peer
          image: eu.gcr.io/spring-boot-gke-243520/eureka-server:7.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: spendingbetter-jks
              mountPath: "/etc/ssl_certs_jks"
              readOnly: true
          command: ["/bin/sh"]
          args: ["-c", "$JAVA_CMD"]
          ports:
            - containerPort: 8761
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 200
            periodSeconds: 5
      volumes:
        - name: spendingbetter-jks
          secret:
            secretName: spendingbetter-jks
