kubernetes/deployment-eureka.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  labels:
    app: eureka-server
spec:
  ports:
    - name: https
      port: 8443
  selector:
    app: eureka-server
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: eureka-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: eureka-server
        version: v1
    spec:
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
          - "eureka.spendingbetter.com"
      containers:
        - name: eureka-server
          image: eu.gcr.io/spring-boot-gke-243520/eureka-server:14.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: spendingbetter-p12
              mountPath: "/etc/ssl_certs_p12"
              readOnly: true
            - name: spendingbetter-crt
              mountPath: "/etc/crt"
              readOnly: true
          command: ["/bin/sh"]
          args: ["-c", "keytool -import -trustcacerts -alias spendingbetter.com -file /etc/crt/www.spendingbetter.com.crt -storepass changeit -keystore $JAVA_HOME/lib/security/cacerts -noprompt
          && keytool -import -file /var/run/secrets/kubernetes.io/serviceaccount/ca.crt -keystore /etc/ssl/truststore.jks -storepass $(SERVER_SSL_KEY_STORE_PASSWORD) -alias kubernetes_ca -noprompt
          && $JAVA_CMD"]
          ports:
            - containerPort: 8443
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /actuator/health
              port: 8443
            initialDelaySeconds: 200
            periodSeconds: 5
      volumes:
        - name: spendingbetter-p12
          secret:
            secretName: spendingbetter-p12
        - name: spendingbetter-crt
          secret:
            secretName: spendingbetter-crt
