kubernetes/deployment-nodejs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: week-menu-api
  annotations:
    cloud.google.com/app-protocols: '{"https-port":"HTTPS","http-port":"HTTP"}'
  labels:
    app: week-menu-api
spec:
  ports:
    - name: https-port
      port: 8443
    - name: http-port
      port: 3002
  selector:
    app: week-menu-api
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: week-menu-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: week-menu-api
        version: v1
    spec:
      containers:
        - name: week-menu-api
          image: eu.gcr.io/spring-boot-gke-243520/nodejs-week-menu-api:2.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: spendingbetter-p12
              mountPath: "/etc/ssl_certs_p12"
              readOnly: true
            - name: spendingbetter-crt
              mountPath: "/etc/crt"
              readOnly: true
          ports:
            - containerPort: 3002
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health
              port: 3002
            initialDelaySeconds: 200
            periodSeconds: 5
      volumes:
        - name: spendingbetter-p12
          secret:
            secretName: spendingbetter-p12
        - name: spendingbetter-crt
          secret:
            secretName: spendingbetter-crt
