kubernetes/deployment-prometheus.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: prometheus-configmap
              mountPath: "/etc/prometheus"
              readOnly: true
          ports:
            - containerPort: 9090
      volumes:
        - name: prometheus-configmap
          configMap:
            name: prometheus
            items:
              - key: prometheus-prod.yml
                path: prometheus.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  ports:
    - port: 9090
  selector:
    app: prometheus
