kubernetes/deployment-react-webapp-jhipster.yml
apiVersion: v1
kind: Service
metadata:
  name: react-webapp-jhipster
  labels:
    app: react-webapp-jhipster
spec:
  ports:
    - name: http-port
      port: 3004
  selector:
    app: react-webapp-jhipster
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: react-webapp-jhipster
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: react-webapp-jhipster
    spec:
      containers:
        - name: react-webapp-jhipster
          image: eu.gcr.io/spring-boot-gke-243520/react-webapp-jhipster:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "50m"
          ports:
            - containerPort: 3004
