kubernetes/deployment-react-webapp.yml
apiVersion: v1
kind: Service
metadata:
  name: react-webapp
  labels:
    app: react-webapp
spec:
  ports:
    - name: http
      port: 3001
  selector:
    app: react-webapp
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: react-webapp
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: react-webapp
    spec:
      containers:
        - name: react-webapp
          image: eu.gcr.io/spring-boot-gke-243520/react-webapp:5.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 3001
