kubernetes/deployment-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    appdb: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      appdb: redis
  template:
    metadata:
      labels:
        appdb: redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
              cpu: "30m"
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      protocol: TCP
  selector:
    appdb: redis
