kubernetes/deployment-zipkin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-server
  annotations:
    cloud.google.com/app-protocols: '{"https-port":"HTTPS","http-port":"HTTP"}'
  labels:
    app: zipkin-server
spec:
  ports:
    - name: https-port
      port: 8443
    - name: http-port
      port: 9411
  selector:
    app: zipkin-server
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zipkin-server
  labels:
    app: zipkin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin-server
  template:
    metadata:
      labels:
        app: zipkin-server
    spec:
      containers:
        - name: zipkin-server
          image: eu.gcr.io/spring-boot-gke-243520/zipkin-server:1.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "512Mi"
          ports:
            - containerPort: 9411
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /actuator/health
              port: 9411
            initialDelaySeconds: 200
            periodSeconds: 5
