kubernetes/deployment-istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "spendingbetter.com"
      tls:
        mode: SIMPLE
        credentialName: "gateway-tls"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: react-webapp
spec:
  hosts:
    - "spendingbetter.com"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: react-webapp
            port:
              number: 3003
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
    - "spendingbetter.com"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /grafana
      route:
        - destination:
            host: grafana
            port:
              number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-service
spec:
  hosts:
    - "spendingbetter.com"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /api/users
      route:
        - destination:
            host: user-service
            port:
              number: 8083
