kubernetes/ingress-gateway.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-gateway
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - spendingbetter.com
      secretName: spendingbetter-tls
  rules:
    - http:
        paths:
          - path: /api/
            backend:
              serviceName: edge-server
              servicePort: 8443
          - path: /
            backend:
              serviceName: react-webapp
              servicePort: 3001
