kubernetes/istio-gateway.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /api/
            backend:
              serviceName: edge-server
              servicePort: 9006
    - http:
        paths:
          - path: /monitoring/
            backend:
              serviceName: admin-server
              servicePort: 9000
    - http:
        paths:
          - path: /config-server/
            backend:
              serviceName: config-server
              servicePort: 8888
    - http:
        paths:
          - path: /eureka-server/
            backend:
              serviceName: eureka-server
              servicePort: 8761
    - http:
        paths:
          - path: /
            backend:
              serviceName: react-webapp
              servicePort: 3001
